--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,12 @@
 {
   "presets": [
     [
-      "env",
-      {
-        "modules": false,
-        "targets": {
-          "browsers": [
-            "last 2 versions",
-            "safari >= 7"
-          ]
-        }
-      }
+      "env"
     ],
     "stage-0",
     "react"
   ],
   "plugins": [
-    "transform-decorators-legacy",
+    "transform-decorators-legacy"
   ]
 }
