--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deep-freeze": "^0.0.1",
     "deepmerge": "^2.0.1",
     "react": "^16.2.0",
-    "react-docgen": "^2.20.1",
+    "react-desc": "^3.4.0",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
     "styled-components": "^3.2.0"
@@ -20,9 +20,14 @@
     "@storybook/addon-links": "^3.3.14",
     "@storybook/addons": "^3.3.14",
     "@storybook/react": "^3.3.14",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-plugin-react-docgen": "^1.8.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-webpack": "^0.8.4",
