--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "deep-freeze": "^0.0.1",
     "deepmerge": "^2.0.1",
+    "immutable": "^3.8.2",
     "react": "^16.2.0",
-    "react-desc": "^3.4.0",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
-    "styled-components": "^3.2.0"
+    "styled-components": "^3.2.0",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.14",
