--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
     "react"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "babel-plugin-styled-components"
   ]
 }
