--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-plugin-react-docgen": "^1.8.3",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
