--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "deepmerge": "^2.0.1",
+    "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
@@ -36,7 +37,8 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "prop-types": "^15.6.1",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "svg-sprite-loader": "^3.7.1"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
