added plop, webpack config, demo components, configs

--- a/.eslintrc
+++ b/.eslintrc
@@ -106,7 +106,8 @@
     "import/resolver": {
       "node": {
         "paths": [
-          "src"
+          "src",
+          "stories"
         ]
       }
     }
