--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
         "core/*": ["src/core/*"],
         "themes/*": ["src/themes/*"],
         "hocs/*": ["src/hocs/*"],
+        "stories/*": ["stories/*"],
       }
   }
 }
