--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "author": "@PandaDoc",
   "license": "MIT",
   "dependencies": {
+    "copy-to-clipboard": "^3.0.8",
     "deepmerge": "^2.0.1",
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "recompose": "^0.26.0",
+    "react-spring": "^4.0.1",
+    "react-syntax-highlighter": "^7.0.2",
     "styled-components": "^3.2.0"
   },
   "devDependencies": {
@@ -22,7 +24,6 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-plugin-react-docgen": "^1.8.3",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
@@ -36,12 +37,14 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
+    "plop": "^2.0.0",
     "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
     "svg-sprite-loader": "^3.7.1"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "generate": "plop --plopfile internals/generators/index.js"
   }
 }
